--- a/config/example.config.yaml
+++ b/config/example.config.yaml
@@ -1,13 +1,26 @@
-botUsername: 'bot'
-botToken: 'token'
+telegram:
+  enable: false
+  tgBotUsername: 'bot'
+  tgBotToken: 'token'
+  tgAdminChatId: -1
+  tournamentChatId: -1
+discord:
+  enable: false
+  applicationId: 1245357947564068956
+  discordBotToken: 'token'
+  discordBotUserId: -1
+  discordAdminChatId: -1
+  ruNotificationTournamentChannelId: -1
+  enNotificationTournamentChannelId: -1
+  ruConfirmationTournamentChannelId: -1
+  enConfirmationTournamentChannelId: -1
+  gameLogsChannelId: -1
 commandResultQueueCapacity: 100
 notificationQueueCapacity: 100
 eventsMailboxPool: 2
 commandResultHandlerThreadNumber: 5
-notificationHandlerThreadNumber: 1
+notificationHandlerThreadNumber: 5
 disableOnStart: false
-adminChatId: -1
-tournamentChatId: -1
 checkNotificationsIntervalInSeconds: 5
 tensoulAppToken: 'token'
 tensoulUrl: 'http://127.0.0.1:9187'
