--- a/gradle.properties
+++ b/gradle.properties
@@ -6,4 +6,8 @@ commonsLangVersion=3.14.0
 snakeYamlVersion=2.2
 junitVersion=4.13.2
 httpClientVersion=5.3.1
-jacksonVersion=2.16.2
+jacksonVersion=2.17.1
+discordVersion=3.2.6
+jooqVersion=3.19.9
+sqliteJdbcVersion=3.46.0.0
+jakartaXmlBindVersion=4.0.2
